

class Partie {}