@startuml
'https://plantuml.com/class-diagram
'https://www.planttext.com/
skinparam classAttributeIconSize 0

' Classe Partie
class Partie {
  -id: String
  -etat: String
  -personnageCible: Personnage
  +demarrerPartie()
  +terminerPartie()
  +changerJoueurActif()
}

' Classe Joueur
class Joueur {
  -nom: String
  -estActif: Boolean
  +poserQuestion(question: Question): Réponse
  +eliminerPersonnage(personnage: Personnage)
  +devinerPersonnage(personnage: Personnage): Boolean
}

' Classe Grille
class Grille {
  -personnages: List
  +ajouterPersonnage(personnage: Personnage)
  +retirerPersonnage(personnage: Personnage)
  +getPersonnages(): List
}

' Classe Personnage
class Personnage {
  -nom: String
  -prenom: String
  -caracteristiques: Map<String, Boolean>
  +getCaracteristique(nom: String): Boolean
}

' Classe Question
class Question {
  -texte: String
  -caracteristique: String
  +getTexte(): String
  +getCaracteristique(): String
}

' Classe Réponse
class Réponse {
  -valeur: Boolean
  +getValeur(): Boolean
}

' Relations Partie "1" -- "2"
Partie "1" -- "2" Joueur : contient
Partie "1" -- "1" Grille : utilise
Partie "1" -- "1" Personnage : cible
Grille "1" *-- "0..*" Personnage : contient
Joueur "1" -- "0..*" Question : pose
Question "1" --> "1" Réponse : génère
Joueur "1" -- "0..*" Personnage : élimine

@enduml
